--- a/style.css
+++ b/style.css
@@ -220,6 +220,11 @@ footer a:hover {
         padding: 5px 60px;
     }
 
+    .banner {
+        padding: 20px 60px;
+        justify-content: end;
+    }
+
     .banner p {
         width: 100%;
     }
@@ -245,15 +250,38 @@ footer a:hover {
 
     .navbar a {
         font-size: smaller;
+        margin: 0;
     }
 
-    .banner p {
-        font-size: x-small;
-        width: 100%;
+    .nav-link {
+        padding: 5px 5px;
+    }
+
+    .banner {
+        padding: 20px 20px;
+        justify-content: end;
     }
 
     .banner h1 {
         font-size: large;
+    }
+
+    .banner,
+    .lugar p {
+        font-size: x-small;
+        width: 100%;
+    }
+
+    .banner button {
+        font-size: x-small;
+    }
+
+    .lugar h3 {
+        font-size: large;
+    }
+
+    .lugar button {
+        font-size: small;
     }
 
     .lowercase {
@@ -266,7 +294,7 @@ footer a:hover {
     }
 
     footer a {
-        font-size: xx-small;
+        font-size: 8px;
     }
 
     footer ul {
